# dotfiles-reboot

./: .Xresources  .gitignore  .gitmodules  .zprofile  .zshrc  README.md  install-user.sh  packages.txt
links/.config/xmonad/: .ghc.environment.x86_64-linux-8.10.5  build  cabal.project  hie.yaml  ig-xmonad.cabal  xmonad.hs
links/.config/xmonad/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
links/.config/xmonad/hiedb/: Common.hie  DirectCodegen.hie  Main.hie  Paths_hsc2hs.hie  Paths_regex_posix.hie  Paths_xmonad.hie  UtilsCodegen.hie  XMonad.hie
links/.config/xmonad/hiedb/Data/Bits/: Compat.hie
links/.config/xmonad/hiedb/Data/ByteString/: UTF8.hie
links/.config/xmonad/hiedb/Data/Default/: Class.hie
links/.config/xmonad/hiedb/Data/String/: UTF8.hie
links/.config/xmonad/hiedb/Graphics/: X11.hie
links/.config/xmonad/hiedb/Graphics/X11/: ExtraTypes.hie  Types.hie  XScreenSaver.hie  Xft.hie  Xinerama.hie  Xlib.hie  Xrandr.hie  Xrender.hie
links/.config/xmonad/hiedb/System/: Random.hie
links/.config/xmonad/hiedb/System/Locale/: SetLocale.hie
links/.config/xmonad/hiedb/System/Random/: Internal.hie  SplitMix.hie  SplitMix32.hie  Stateful.hie
links/.config/xmonad/hiedb/Text/Regex/: Posix.hie
links/.config/xmonad/hiedb/XMonad/: Config.hie  Core.hie  Doc.hie  Layout.hie  Main.hie  ManageHook.hie  Operations.hie  Prelude.hie  Prompt.hie  StackSet.hie
links/.config/xmonad/hiedb/XMonad/Actions/: AfterDrag.hie  BluetileCommands.hie  Commands.hie  ConstrainedResize.hie  CopyWindow.hie  CycleRecentWS.hie  (+62 more)
(+2009 files in other folders)
