name:                ig-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ig-xmonad
  main-is:             xmonad.hs
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010
